--- a/tutor.html
+++ b/tutor.html
@@ -21,7 +21,7 @@
         <img src="girl.jpg" alt="This is a girl">
 
         <!-- style -->
-        <p style="color:blueviolet">This is a paragraph</p>
+        <p style="color:blueviolet">This is paragraph</p>
 
         <!-- lang : use for html tag-->
         <!-- <html lang="en/US">......</html> -->
